<resources>
    <string name="app_name">CambiameApp</string>
    <string name="powered">Powered by JRsoft</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="welcome">Bienvenido a Cambiame</string>
    <string name="loginbtn">INGRESAR</string>
    <string name="otro">¿Otro?</string>
    <string name="arg">Peso Argentino</string>
    <string name="peru">Sol Peruano</string>
    <string name="chile">Peso Chile</string>
    <string name="dolar">Dolar</string>
    <string name="monto">Monto</string>
    <string name="exEj">Ejemplo: 6.94</string>
    <string name="tipoDeCambio">Ingrese el tipo de cambio porfavor</string>
    <string name="save">Guardar </string>
    <string name="Cambiar">Cambiar </string>
    <string name="CambArg">Monto en Pesos Argentinos</string>
    <string name="CambSol">Monto en Soles</string>
    <string name="CambChil">Monto en Pesos Chilenos</string>
    <string name="CambDol">Monto en Dolares</string>
    <string name="CambBol">Monto en Bolivianos</string>
    <string name="CambOtr">Monto a cambiar</string>
</resources>