<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2F055"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="149dp"
        android:layout_height="139dp"
        android:layout_marginTop="92dp"
        app:circularflow_defaultRadius="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011"
        app:srcCompat="@drawable/logocambiame2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="375dp"
        android:layout_height="380dp"
        android:layout_marginBottom="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="33sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/welcome" />

        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_edit_texts"
            android:drawableStart="@drawable/user2icon"
            android:ems="10"
            android:hint="@string/user"
            android:textSize="27sp"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_edit_texts"
            android:drawableStart="@drawable/pass2icon"
            android:ems="10"
            android:hint="@string/pass"
            android:textSize="27sp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonIngresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:backgroundTint="#676767"
            android:textSize="23sp"
            android:textColor="@color/black"

            android:text="@string/loginbtn" />

        <TextView
            android:id="@+id/poweredText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="#74756D"
            android:layout_gravity="center"
            android:text="@string/powered" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>